--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -5,29 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="300
+        " Width="400">
+    <Grid x:Name="Grid" Height="280" Width="400" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="418*"/>
-            <ColumnDefinition Width="383*"/>
+            <ColumnDefinition Width="280"/>
+            <ColumnDefinition Width="280"/>
         </Grid.ColumnDefinitions>
-        <Canvas x:Name="Canvas" Background="White" Margin="0,0,97,0" Cursor="Arrow" MouseDown="Canvas_MouseDown"
-                MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Grid.ColumnSpan="2" />
-        <TextBlock HorizontalAlignment="Left" Margin="290,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
-                   FontSize="15" Width="90" Height="23" Grid.Column="1" Text="Brush Size:"/>
-        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="286,83,0,0"
+        <Canvas x:Name="Canvas" Background="White" Margin="0,0,26,0" Cursor="Arrow" MouseDown="Canvas_MouseDown"
+                MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="280"/>
+        <TextBlock HorizontalAlignment="Left" Margin="19,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
+                   FontSize="15" Width="90" Height="23" Text="Brush Size:" Grid.Column="1"/>
+        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="19,97,0,0"
                 VerticalAlignment="Top" Height="43" Width="90" Click="Handle_Save_Click" FontSize="20" Grid.Column="1" >
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <Slider x:Name="slider" Minimum="0" Maximum="50" Value="25" TickFrequency="1" IsSnapToTickEnabled="True" Margin="295,51,0,0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="20" Width="79"/>
-        <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="50" Margin="310,28,0,0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815"/>
-        <Button x:Name="NumberRecognizer" Grid.Column="1" Content="What number &#xD;&#xA;is this?" HorizontalAlignment="Left" Margin="286,176,0,0" VerticalAlignment="Top" Height="41" Width="90" Click="NumberRecognizer_Click">
+        <Slider x:Name="slider" Minimum="0" Maximum="50" Value="25" TickFrequency="1" IsSnapToTickEnabled="True" Margin="25,67,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="20" Width="78" Grid.Column="1"/>
+        <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="50" Margin="39,38,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815" Height="18" Grid.Column="1"/>
+        <Button x:Name="NumberRecognizer" Content="What number &#xD;&#xA;is this?" HorizontalAlignment="Left" Margin="19,190,0,0" VerticalAlignment="Top" Height="41" Width="90" Click="NumberRecognizer_Click" Grid.Column="1">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="286,137,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" Height="34" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" />
+        <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="19,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" Height="34" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" />
     </Grid>
 </Window>
