--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -15,20 +15,26 @@
         <Canvas x:Name="Canvas" Background="White" Margin="0,0,0,0" Cursor="Arrow" MouseDown="Canvas_MouseDown"
                 MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="280" Height="280" />
         <TextBlock HorizontalAlignment="Left" Margin="19,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
-                   FontSize="15" Width="90" Height="23" Text="Brush Size:" Grid.Column="1"/>
-        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="19,97,0,0"
-                VerticalAlignment="Top" Height="43" Width="90" Click="Handle_Save_Click" FontSize="20" Grid.Column="1" >
+                   FontSize="15" Width="75" Height="18" Text="Brush Size:" Grid.Column="1"/>
+        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="19,78,0,0"
+                VerticalAlignment="Top" Height="33" Width="75" Click="Handle_Save_Click" FontSize="15" Grid.Column="1" >
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <Slider x:Name="slider" Minimum="0" Maximum="50" Value="25" TickFrequency="1" IsSnapToTickEnabled="True" Margin="25,67,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="20" Width="78" Grid.Column="1"/>
-        <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="50" Margin="39,38,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815" Height="18" Grid.Column="1"/>
-        <Button x:Name="NumberRecognizer" Content="What number &#xD;&#xA;is this?" HorizontalAlignment="Left" Margin="19,190,0,0" VerticalAlignment="Top" Height="41" Width="90" Click="NumberRecognizer_Click" Grid.Column="1">
+        <Slider x:Name="slider" Minimum="0" Maximum="50" Value="25" TickFrequency="1" IsSnapToTickEnabled="True" Margin="24,54,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="16" Width="65" Grid.Column="1"/>
+        <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="41" Margin="36,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815" Height="14" Grid.Column="1"/>
+        <Button x:Name="NumberRecognizer" Content="What number &#xD;&#xA;is this?" HorizontalAlignment="Left" Margin="19,150,0,0" VerticalAlignment="Top" Height="32" Width="75" Click="NumberRecognizer_Click" Grid.Column="1" FontSize="8">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="19,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" Height="34" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" />
+        <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="19,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75" Height="26" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" />
+        <Button x:Name="Train" Content="Train model X times" HorizontalAlignment="Left" Margin="19,229,0,0" VerticalAlignment="Top" Height="32" Width="75" Grid.Column="1" FontSize="8" Click="Train_Click">
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
+        <TextBox x:Name="Train_Iterations" HorizontalAlignment="Left" Margin="19,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75" Height="26" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" />
     </Grid>
 </Window>
