--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -16,13 +16,9 @@
                 MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="280" Height="280" />
         <TextBlock HorizontalAlignment="Left" Margin="10,7,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
                    FontSize="15" Width="75" Height="18" Text="Brush Size:" Grid.Column="1"/>
-        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="140,10,0,0"
-                VerticalAlignment="Top" Height="41" Width="41" Click="Handle_Save_Click" FontSize="9" Grid.Column="1" FontWeight="Bold" >
-            <Button.Effect>
-                <DropShadowEffect/>
-            </Button.Effect>
-        </Button>
-        <Slider x:Name="slider" Minimum="0" Maximum="50" Value="25" TickFrequency="1" IsSnapToTickEnabled="True" Margin="16,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="21" Width="114" Grid.Column="1"/>
+        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="8,229,0,0"
+                VerticalAlignment="Top" Height="41" Width="41" Click="Handle_Save_Click" FontSize="9" Grid.Column="1" FontWeight="Bold" />
+        <Slider x:Name="slider" Minimum="0" Maximum="30" Value="18" TickFrequency="1" IsSnapToTickEnabled="True" Margin="16,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="21" Width="114" Grid.Column="1"/>
         <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="40" Margin="90,8,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815" Height="19" Grid.Column="1"/>
         <Button x:Name="NumberRecognizer" Content="What number &#xD;&#xA;is this?" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" Height="32" Width="75" Click="NumberRecognizer_Click" Grid.Column="1" FontSize="9" FontWeight="Bold"/>
         <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="93,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Height="20" FontSize="10" BorderThickness="1,1,1,1" Grid.Column="1" />
@@ -38,5 +34,7 @@
         <Button Grid.Column="1" Content="7" HorizontalAlignment="Left" Margin="58,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_7"/>
         <Button Grid.Column="1" Content="8" HorizontalAlignment="Left" Margin="83,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_8"/>
         <Button Grid.Column="1" Content="9" HorizontalAlignment="Left" Margin="108,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_9"/>
+        <Button x:Name="Clear_Button" Content="Clear" HorizontalAlignment="Left" Margin="140,10,0,0"
+            VerticalAlignment="Top" Height="41" Width="41" Click="Handle_Clear_Click" FontSize="9" Grid.Column="1" FontWeight="Bold" />
     </Grid>
 </Window>
