--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -5,36 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300
-        " Width="474">
-    <Grid x:Name="Grid" Height="280" Margin="0,2,0,2" >
+        Title="MainWindow" Height="600
+        " Width="750">
+    <Grid x:Name="Grid" Height="560 " Margin="0,2,0,2" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="280"/>
-            <ColumnDefinition Width="280"/>
+            <ColumnDefinition Width="560"/>
+            <ColumnDefinition Width="560"/>
         </Grid.ColumnDefinitions>
         <Canvas x:Name="Canvas" Background="Black" Margin="0,0,0,0" Cursor="Arrow" MouseDown="Canvas_MouseDown"
-                MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="280" Height="280" />
-        <TextBlock HorizontalAlignment="Left" Margin="10,7,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
-                   FontSize="15" Width="75" Height="18" Text="Brush Size:" Grid.Column="1"/>
-        <Button x:Name="Save_File_Button" Content="Save File" HorizontalAlignment="Left" Margin="8,229,0,0"
-                VerticalAlignment="Top" Height="41" Width="41" Click="Handle_Save_Click" FontSize="9" Grid.Column="1" FontWeight="Bold" />
-        <Slider x:Name="slider" Minimum="0" Maximum="30" Value="18" TickFrequency="1" IsSnapToTickEnabled="True" Margin="16,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="21" Width="114" Grid.Column="1"/>
-        <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="40" Margin="90,8,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815" Height="19" Grid.Column="1"/>
-        <Button x:Name="NumberRecognizer" Content="What number &#xD;&#xA;is this?" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" Height="32" Width="75" Click="NumberRecognizer_Click" Grid.Column="1" FontSize="9" FontWeight="Bold"/>
-        <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="93,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Height="20" FontSize="10" BorderThickness="1,1,1,1" Grid.Column="1" />
-        <Button x:Name="Train" Content="Train model" HorizontalAlignment="Left" Margin="8,179,0,0" VerticalAlignment="Top" Height="32" Width="75" Grid.Column="1" Click="Train_Click" FontWeight="Bold"/>
-        <TextBox x:Name="Train_Iterations" HorizontalAlignment="Left" Margin="93,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Height="20" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" Text="10000" AutomationProperties.ItemType="" />
-        <Button Grid.Column="1" Content="0" HorizontalAlignment="Left" Margin="8,116,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_0"/>
-        <Button Grid.Column="1" Content="1" HorizontalAlignment="Left" Margin="33,116,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_1"/>
-        <Button Grid.Column="1" Content="2" HorizontalAlignment="Left" Margin="58,116,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_2"/>
-        <Button Grid.Column="1" Content="3" HorizontalAlignment="Left" Margin="83,116,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_3"/>
-        <Button Grid.Column="1" Content="4" HorizontalAlignment="Left" Margin="108,116,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_4"/>
-        <Button Grid.Column="1" Content="5" HorizontalAlignment="Left" Margin="8,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_5"/>
-        <Button Grid.Column="1" Content="6" HorizontalAlignment="Left" Margin="33,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_6"/>
-        <Button Grid.Column="1" Content="7" HorizontalAlignment="Left" Margin="58,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_7"/>
-        <Button Grid.Column="1" Content="8" HorizontalAlignment="Left" Margin="83,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_8"/>
-        <Button Grid.Column="1" Content="9" HorizontalAlignment="Left" Margin="108,140,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="Click_9"/>
-        <Button x:Name="Clear_Button" Content="Clear" HorizontalAlignment="Left" Margin="140,10,0,0"
-            VerticalAlignment="Top" Height="41" Width="41" Click="Handle_Clear_Click" FontSize="9" Grid.Column="1" FontWeight="Bold" />
+                MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="560" Height="560" />
+        <TextBlock HorizontalAlignment="Left" Margin="17,6,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="78" Height="23" Text="Brush Size:" Grid.Column="1" FontSize="15" TextAlignment="Center"/>
+        <Button x:Name="Save_File_Button" Content="Save Model" HorizontalAlignment="Left" Margin="5,250,0,0"
+                VerticalAlignment="Top" Height="41" Width="176" Click="Handle_Save_Click" FontSize="20" Grid.Column="1" FontWeight="Bold" />
+        <Slider x:Name="slider" Minimum="30" Maximum="60" Value="45" TickFrequency="1" IsSnapToTickEnabled="True" Margin="10,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="21" Width="171" Grid.Column="1"/>
+        <TextBox x:Name="Radius" Text="{Binding Value, ElementName=slider, Mode=TwoWay}" Width="67" Margin="114,8,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.526,0.815" Height="19" Grid.Column="1"/>
+        <Button x:Name="NumberRecognizer" Content="What number is this?" HorizontalAlignment="Left" Margin="5,103,0,0" VerticalAlignment="Top" Height="32" Width="104" Click="NumberRecognizer_Click" Grid.Column="1" FontSize="10" FontWeight="Bold" Cursor=""/>
+        <TextBox x:Name="FinalNumber" HorizontalAlignment="Left" Margin="114,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="67" Height="31" FontSize="25" BorderThickness="1,1,1,1" Grid.Column="1" />
+        <Button x:Name="Train" Content="Train model" HorizontalAlignment="Left" Margin="5,213,0,0" VerticalAlignment="Top" Height="32" Width="105" Grid.Column="1" Click="Train_Click" FontWeight="Bold" FontSize="15"/>
+        <TextBox x:Name="Train_Iterations" HorizontalAlignment="Left" Margin="116,219,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="65" Height="20" FontSize="12" BorderThickness="1,1,1,1" Grid.Column="1" Text="10000" AutomationProperties.ItemType="" />
+        <Button Grid.Column="1" Content="0" HorizontalAlignment="Left" Margin="5,141,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_0"/>
+        <Button Grid.Column="1" Content="1" HorizontalAlignment="Left" Margin="41,141,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_1"/>
+        <Button Grid.Column="1" Content="2" HorizontalAlignment="Left" Margin="78,141,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_2"/>
+        <Button Grid.Column="1" Content="3" HorizontalAlignment="Left" Margin="114,141,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_3"/>
+        <Button Grid.Column="1" Content="4" HorizontalAlignment="Left" Margin="150,141,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_4"/>
+        <Button Grid.Column="1" Content="5" HorizontalAlignment="Left" Margin="5,178,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_5"/>
+        <Button Grid.Column="1" Content="6" HorizontalAlignment="Left" Margin="41,178,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_6"/>
+        <Button Grid.Column="1" Content="7" HorizontalAlignment="Left" Margin="78,178,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_7"/>
+        <Button Grid.Column="1" Content="8" HorizontalAlignment="Left" Margin="114,178,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_8"/>
+        <Button Grid.Column="1" Content="9" HorizontalAlignment="Left" Margin="150,178,0,0" VerticalAlignment="Top" Height="30" Width="30" Click="Click_9"/>
+        <Button x:Name="Clear_Button" Content="Clear" HorizontalAlignment="Left" Margin="5,58,0,0"
+            VerticalAlignment="Top" Height="41" Width="176" Click="Handle_Clear_Click" FontSize="20" Grid.Column="1" FontWeight="Bold" />
+        <Button x:Name="Load_Model" Content="Load Model" HorizontalAlignment="Left" Margin="5,296,0,0"
+            VerticalAlignment="Top" Height="41" Width="176" Click="Handle_Load_Click" FontSize="20" Grid.Column="1" FontWeight="Bold" />
     </Grid>
 </Window>
